--- a/gemas/Gemfile
+++ b/gemas/Gemfile
@@ -13,5 +13,4 @@ gem 'reel', '~> 0.6.1'
 gem 'http', '~> 5.0', '>= 5.0.1'
 gem 'webrick', '~> 1.7'
 gem 'json', '~> 2.5', '>= 2.5.1'
-gem 'mysql', '~> 2.9', '>= 2.9.1'
-
+gem 'mysql2', '~> 0.5.3'
