--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+# Node:
+node_modules
+build
+npm-debug.log
+.env
+.DS_Store
